# safeinterp

./: LICENSE  README.md  pyproject.toml
examples/: example_basic.py
safeinterp/: __init__.py  core.py
